--- a/AX3600.config
+++ b/AX3600.config
@@ -84,6 +84,11 @@ CONFIG_PACKAGE_luci-theme-bootstrap=y
 #LuCi app
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-opkg=y
+CONFIG_PACKAGE_luci-app-cpufreq=y
+CONFIG_PACKAGE_luci-app-pushbot=y
+CONFIG_PACKAGE_luci-app-statistics=y
+CONFIG_PACKAGE_luci-app-vnstat=y
+CONFIG_PACKAGE_luci-app-autoreboot=y
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus is not set
 # CONFIG_PACKAGE_luci-app-openclash=y
@@ -94,6 +99,16 @@ CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-ntpc=y #NTP时间同步服务器
 # CONFIG_PACKAGE_luci-app-qos is not set
 CONFIG_PACKAGE_luci-app-ttyd=y #网页终端命令行
+
+#turboacc
+CONFIG_PACKAGE_luci-app-turboacc=y
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_Flow_Offload=y
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_Shortcut-FE=y #Shortcut-FE 流量分载
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_Shortcut-FE_CM=y #Shortcut-FE 流量分载(高通芯片版) 
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y #BBR拥塞控制算法提升TCP网络性能
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_Pdnsd=y #DNS防污染
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSForwarder=y #DNS防污染
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSProxy=y #DNS防污染
 
 #passwall
 CONFIG_PACKAGE_luci-app-passwall=y
