--- a/AX3600.config
+++ b/AX3600.config
@@ -56,6 +56,7 @@ CONFIG_PACKAGE_uhttpd-mod-ubus=y
 
 #NSS加速
 CONFIG_PACKAGE_kmod-qca-nss-dp=y
+CONFIG_PACKAGE_kmod-kmod-qca-nss-cfi-cryptoapi=y
 CONFIG_PACKAGE_kmod-qca-ssdk-nohnat=y
 CONFIG_PACKAGE_nss-firmware-ipq8074=y
 
