--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -20,10 +20,10 @@ on:
         default: 'false'
 
 env:
-  # REPO_URL: https://github.com/robimarko/openwrt
-  # REPO_BRANCH: ipq807x-5.15-pr-nss-drv
-  REPO_URL: https://github.com/bitthief/openwrt
-  REPO_BRANCH: ipq807x-5.15-pr-final
+  REPO_URL: https://github.com/robimarko/openwrt
+  REPO_BRANCH: ipq807x-5.15-pr-nss-drv
+  # REPO_URL: https://github.com/bitthief/openwrt
+  # REPO_BRANCH: ipq807x-5.15-pr-final
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: AX3600.config
   DIY_P1_SH: diy-part1.sh
