--- a/AX3600.config
+++ b/AX3600.config
@@ -56,7 +56,6 @@ CONFIG_PACKAGE_uhttpd-mod-ubus=y
 
 #NSS加速
 CONFIG_PACKAGE_kmod-qca-nss-dp=y
-CONFIG_PACKAGE_kmod-kmod-qca-nss-cfi-cryptoapi=y
 CONFIG_PACKAGE_kmod-qca-ssdk-nohnat=y
 CONFIG_PACKAGE_nss-firmware-ipq8074=y
 
@@ -97,6 +96,16 @@ CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-ntpc=y #NTP时间同步服务器
 # CONFIG_PACKAGE_luci-app-qos is not set
 CONFIG_PACKAGE_luci-app-ttyd=y #网页终端命令行
+
+#turboacc
+CONFIG_PACKAGE_luci-app-turboacc=y
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_Flow_Offload=y
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_Shortcut-FE=y #Shortcut-FE 流量分载
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_Shortcut-FE_CM=y #Shortcut-FE 流量分载(高通芯片版) 
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y #BBR拥塞控制算法提升TCP网络性能
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_Pdnsd=y #DNS防污染
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSForwarder=y #DNS防污染
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSProxy=y #DNS防污染
 
 #passwall
 CONFIG_PACKAGE_luci-app-passwall=y
