--- a/AX3600.config
+++ b/AX3600.config
@@ -17,6 +17,8 @@ CONFIG_LIBSODIUM_MINIMAL=y
 #语言
 CONFIG_LUCI_LANG_en=y
 CONFIG_LUCI_LANG_zh_Hans=y
+CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
+
 
 #虚拟内存
 CONFIG_PACKAGE_kmod-zram=y
